update/env: updateurl client

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # PORT
 PORT=3001
 SOCKET_PORT=8800
-CLIENT_URL=http://localhost:3000
+CLIENT_URL=https://shop-ecommerce-ttcs.vercel.app
 
 # AUTH TOKEN
 ACCESS_TOKEN=access_token
