--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
     "node-cron": "^3.0.3",
